--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
         "jsx-a11y/no-noninteractive-element-interactions": "off",
         "jsx-a11y/media-has-caption": "off",
         "import/no-cycle": "off",
+        "no-param-reassign": "off",
+        "react/button-has-type": "off",
         "max-len": [
             "error",
             {
